# claude-swarm

./: .claudeswarm.toml.example  .claudeswarm.yaml  .claudeswarm.yaml.example  .e2b_session  .env.example  .gitignore  .gitignore.template  ACK_RACE_CONDITION_FIX.md  AGENT0_INSTRUCTIONS.txt  AGENT1_INSTRUCTIONS.txt  AGENT1_SUMMARY.md  AGENT2_COMPLETION_REPORT.md  AGENT3_CLI_DOCS_SUMMARY.md  AGENT_CONCURRENCY_FIX_FINAL_REPORT.md  AGENT_TOOLS_GUIDE.md  BACKEND_API_SUMMARY.md  CHANGELOG.md  CLEANUP_REPORT.md  CODE_CHANGES_DETAILED.md  CODE_REVIEWS_SUMMARY.md  CODE_REVIEW_CONSENSUS.md  CODE_REVIEW_WORKFLOWS.md  CODE_REVIEW_autonomous_dev.md  CODE_REVIEW_code_review_py.md  COMPREHENSIVE_FIX_SUMMARY.md  CONCURRENCY_AUDIT_FINAL.md  CONCURRENCY_FIX_SUMMARY.md  CONFIG_USAGE.md  CONTRIBUTING.md  COORDINATION_IMPLEMENTATION_SUMMARY.md  DASHBOARD_PREVIEW.md  DEVELOPMENT.md  DISCOVERY_IMPLEMENTATION.md  DOCUMENTATION_REVIEW_REPORT.md  E2B_LAUNCHER_CODE_REVIEW.md  E2B_REVIEW_SUMMARY.md  FINAL_CODE_QUALITY_ASSESSMENT.md  FINAL_DOCUMENTATION_ASSESSMENT.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  (+78 more)
.claude/: settings.json  settings.json.example
.claude/hooks/: check-for-messages.sh
.github/workflows/: ci.yml
docs/: AGENT_INSTRUCTIONS.md  AGENT_PROTOCOL.md  AGENT_QUICK_REFERENCE.md  CLI_USAGE.md  CONFIGURATION.md  DASHBOARD.md  E2B_INTEGRATION.md  E2B_SHELL_VISION.md  FINAL_SESSION_SUMMARY.md  INTEGRATION_GUIDE.md  MCP_INTEGRATION.md  PERFORMANCE_SUMMARY.md  PRODUCTION_READY_SUMMARY.md  RACE_CONDITION_DIAGRAM.md  SSE_ENDPOINTS.md  TMUX_FIX_REPORT.md  TUTORIAL.md  api-reference.md  architecture.md  getting-started.md  protocol.md  security.md  troubleshooting.md
examples/: README.md  claude-hooks-settings.json  demo_setup.sh  demo_walkthrough.sh  onboard_agents.py
examples/configs/: README.md  default.yaml  fast-paced.yaml  large-team.yaml  small-team.yaml  strict.yaml
examples/hackathon_demo/: DEMO_SCRIPT.md  HACKATHON_SUBMISSION.md  QUICK_START.md  README.md  run_demo.py  simple_demo.sh  start_demo.sh
scripts/: onboard.sh  onboard_agents.py  reload.sh  setup_agents.sh
src/claudeswarm/: __init__.py  ack.py  agent_cards.py  backend.py  cli.py  config.py  conflict_resolution.py  context.py  coordination.py  delegation.py  discovery.py  file_lock.py  learning.py  locking.py  logging_config.py  memory.py  messaging.py  monitoring.py  process_backend.py  project.py  tasks.py  tmux_backend.py  utils.py  validators.py
src/claudeswarm/cloud/: __init__.py  e2b_launcher.py  mcp_bridge.py  mcp_config.py  security_utils.py  types.py
src/claudeswarm/web/: README.md  __init__.py  launcher.py  server.py
src/claudeswarm/web/static/: README.md  dashboard.js  index.html  style.css  test.html
src/claudeswarm/workflows/: __init__.py  autonomous_dev.py  code_review.py  collaborative_dev.py  consensus.py  work_distributor.py
tests/: __init__.py  conftest.py  demo_injection_prevention.py  test_ack.py  test_agent_cards.py  test_backend.py  test_cli.py  test_cli_auto_detect.py  test_cli_messaging.py  test_cli_validators.py  test_cloud_e2b_launcher.py  test_config.py  test_config_cli.py  test_config_integration.py  test_config_modules.py  test_context.py  test_coordination.py  test_coordination_coverage.py  test_dashboard_cli.py  test_delegation.py  test_discovery.py  test_discovery_project_filtering.py  test_discovery_tmux_pane_id.py  test_hooks.py  test_learning.py  test_lock_refresh_concurrency.py  test_locking.py  test_memory.py  test_message_logger_get_messages.py  test_messaging.py  test_messaging_delivery_status.py  test_messaging_integration.py  test_messaging_reliability.py  test_monitoring.py  test_monitoring_security.py  test_performance.py  test_process_backend.py  test_security.py  test_tasks.py  test_tmux_backend.py  (+5 more)
tests/cloud/: __init__.py  test_integration_sandbox_mcp.py  test_mcp_bridge.py  test_mcp_bridge_docker.py
tests/integration/: __init__.py  helpers.py  test_basic_coordination.py  test_code_review_workflow.py  test_config_e2e.py  test_dashboard_e2e.py  test_message_escalation.py  test_real_tmux.py  test_stale_lock_recovery.py
