[project]
name = "claude-swarm"
version = "0.1.0"
description = "Multi-agent coordination system for Claude Code instances using tmux-based messaging and file locking"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Claude Swarm Team" }
]
license = { text = "MIT" }
keywords = ["agent", "coordination", "tmux", "multi-agent", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "safety>=3.0.0",
]
cloud = [
    "e2b-code-interpreter>=0.1.0",
    "docker>=6.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
claudeswarm = "claudeswarm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudeswarm"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B904",  # raise-without-from-inside-except (too noisy for existing code)
    "UP045", # Use X | None instead of Optional[X] (style preference)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F821", "B017", "B008"]  # Allow test-specific patterns
"src/claudeswarm/web/server.py" = ["B008"]  # FastAPI Depends() pattern

[tool.mypy]
python_version = "3.12"
# Relaxed strict mode - fix type issues in follow-up PR
strict = false
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
check_untyped_defs = false
strict_equality = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["claudeswarm.*"]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=claudeswarm --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "asyncio: marks tests as async tests"
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
